@@ -9,6 +9,7 @@ WriteMakefile(
     LIBS              => [],
     DEFINE            => '',
     INC               => '-I.',
+    EXE_FILES         => [ map "bin/$_", qw(pinmap) ],
     META_MERGE => {
         'meta-spec' => { version => 2 },
         resources   => {
